--- a/style.css
+++ b/style.css
@@ -3,4 +3,8 @@
     width:400px;
     height: 500px;
     background-color: aliceblue;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:50px;
 }
