--- a/style.css
+++ b/style.css
@@ -8,3 +8,86 @@
     margin-right:auto;
     margin-top:50px;
 }
+
+
+nav {
+    background-color: #3a24f0;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    position: sticky;
+    top: 0px;
+  }
+  
+  nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0px 20px;
+    font-size: 1.3em;
+  }
+  
+  nav a:hover {
+    text-decoration: underline;
+  }
+  
+  section {
+    min-height: 100vh;
+  }
+
+  @media (max-width: 768px) {
+    nav {
+      padding: 5px;
+    }
+    
+    nav a {
+      margin: 0px 10px;
+      font-size: 1em;
+    }
+    /* Hide the input checkbox */
+.menu-toggle {
+  display: none;
+}
+
+/* Style for the hamburger menu icon */
+.menu-icon {
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+  font-size: 24px;
+  color: white;
+}
+
+/* Style for the navigation menu */
+.nav-links {
+  display: none;
+  position: absolute;
+  top: 60px; /* Adjust the top position as needed */
+  right: 0;
+  background-color: #3a24f0;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Show the navigation menu when the checkbox is checked */
+.menu-toggle:checked + .menu-icon + .nav-links {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-links a {
+  margin: 10px 0;
+}
+
+  }
+
+  
+  
+  
+  
+  
+  
